tests/idris2/reg017/expected
1/1: Building lammult (lammult.idr)
Error: While processing right hand side of badmap. Mismatch between: (0 _ : ?a) -> ?b and ?a -> ?b.

lammult:2:18--2:19
 1 | badmap : List Int -> List Int
 2 | badmap = map (\0 x => 2)
                      ^

